--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" type="text/css" href="css/home.css">
 <h1>
     Its home page
+    <a href="/users/sign-in">SignIn</a>
+    <a href="/users/sign-up">SignUp</a>
 </h1>
