--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title><%= title %></title>
         <link rel="stylesheet" type="text/css" href="/css/layout.css">
         <%- style %>
 
