whole manual authentication done

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="/css/user_profile.css">
 <h1>
-    Its user profile
+    Hey <%= name %> Welcome to Codeial 
+    <a href="/users/signOut"> Signout </a>
 </h1>
