--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/css/user_profile.css">
 <h1>
-    Its user profile
+    hey <%= user.name %> Welcome to codeial !!
+    <br>
+    Email : <%= user.email %>
 </h1>
