--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,14 +2,18 @@
     <head>
         <title><%= title %></title>
         <link rel="stylesheet" type="text/css" href="/css/layout.css">
-        <%- style %>
+        <link rel="stylesheet" type="text/css" href="/css/header.css">
+        <link rel="stylesheet" type="text/css" href="/css/footer.css">
 
+        <%- style %>
     </head>
     <body>
         <%- include('_header') %>
+        <main id="main-content">
         <%- body %>
+    </main>
         <%- include('_footer') %>
 
         <%- script %>
-    </body>
+    </body> 
 </html>
