--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,10 @@
 <footer>
-    Its footer
+    <div id="footer-container">
+        <p>Codeial pvt. limited</p>
+        <nav></nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/users/profile">Profile</a></li>
+        </ul>
+    </div>
 </footer>
