--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,18 @@
 <link rel="stylesheet" type="text/css" href="/css/user_profile.css">
 <h1>
-    hey <%= user.name %> Welcome to codeial !!
+    hey <%= profile_user.name %> Welcome to codeial !!
     <br>
-    Email : <%= user.email %>
+    Email : <%= profile_user.email %>
 </h1>
+
+<% if(profile_user.id == locals.user.id) { %> 
+<h2>Update Profile</h2>
+<div id="update-form">
+    <form action="/users/update" method="post">
+        <input type="text" placeholder="Enter Name" name="name" value="<%=profile_user.name %>" required>
+        <input type="email" placeholder="Enter Email" name="email" value="<%=profile_user.email %>" required>
+        <input type="hidden" name="userId" value=<%=profile_user.id %>>
+        <button type="submit">Update</button>
+    </form>
+</div>
+<% } %>
