--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -4,7 +4,9 @@
         <nav></nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/users/profile">Profile</a></li>
+            <% if(locals.user) { %>
+            <li><a href="/users/profile/<%=locals.user.id%>">Profile</a></li>
+            <% } %>
         </ul>
     </div>
 </footer>
