--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="css/home.css">
+<script src="js/home.js"></script>
 <% if(locals.user) { %>
 <div id="posts-form-container">
     <form id="post-submit-form" action="/posts/create" method="post">
