--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,10 +16,11 @@
     </main>
         <%- include('_footer') %>
 
-        <%- script %>
+       
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-
+        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+        <%- script %>
         <% if(flash.success && flash.success.length>0)  { %> 
         <script>
                new Noty({
