--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,5 +1,8 @@
 <link rel="stylesheet" type="text/css" href="/css/user_profile.css">
 
+<img src="<%= profile_user.avatar %>" width="100px">
+
+
 <h1>
     hey <%= profile_user.name %> Welcome to codeial !!
     <br>
@@ -9,10 +12,11 @@
 <% if(profile_user.id == locals.user.id) { %> 
 <h2>Update Profile</h2>
 <div id="update-form">
-    <form action="/users/update" method="post">
+    <form action="/users/update" method="post" enctype="multipart/form-data">
         <input type="text" placeholder="Enter Name" name="name" value="<%=profile_user.name %>" required>
         <input type="email" placeholder="Enter Email" name="email" value="<%=profile_user.email %>" required>
         <input type="hidden" name="userId" value=<%=profile_user.id %>>
+        <input type="file" name="avatar">
         <button type="submit">Update</button>
     </form>
 </div>
