change in comment routes

--- a/views/_comments.ejs
+++ b/views/_comments.ejs
@@ -5,7 +5,7 @@
             <p> Comment done by: <%= comment.user.name %></p>
             <p> <%= comment.content %></p>
             <% if(locals.user && (comment.user.id == locals.user.id || post.user.id == locals.user.id)){ %>
-            <a class="comment-delete-button" href="posts/comments/delete/<%= comment.id %>">Delete Comment</a>
+            <a class="comment-delete-button" href="/comments/delete/<%= comment.id %>">Delete Comment</a>
             <% } %>
         </li>
       
