google authentication added

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -9,4 +9,8 @@
     <button type="submit"> Login </button>
     </form>
     </div>
+
+    <p>
+        <a href="/users/auth/google">Google sign-in/sign-up</a>
+    </p>
 </div>
