--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -11,4 +11,9 @@
     <button type="submit"> Register </button>
     </form>
     </div>
+
+    <p>
+        <a href="/users/auth/google">Google sign-in/sign-up</a>
+    </p>
+
 </div>
