--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,5 +2,8 @@ h1 {
   color: white;
   background-color: aqua; }
 
-code {
-  display: none; }
+.color-blue {
+  color: blue; }
+
+a {
+  color: inherit; }
