Forgot password functionality added

--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,3 +1,4 @@
+<script src="/js/signIn.js"></script>
 <div id="sign-in-container">
     <h1>
         Login
@@ -7,10 +8,14 @@
     <input type="email" placeholder="Enter Email" name="email" required></input>
     <input type="password" placeholder="Enter password" name="password" required></input>
     <button type="submit"> Login </button>
+    <a id="forgot-password" href="">forgot password</a>
     </form>
     </div>
 
     <p>
         <a href="/users/auth/google">Google sign-in/sign-up</a>
     </p>
+    <div id="forgot-password-div"></div>
+  
+   
 </div>
