--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,4 +1,4 @@
-<script src="/js/signIn.js"></script>
+<script src="<%=assetPath('js/signIn.js')%>"></script>
 <div id="sign-in-container">
     <h1>
         Login
