--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,9 +3,9 @@
         <title><%= title %></title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/layout.css">
-        <link rel="stylesheet" type="text/css" href="/css/header.css">
-        <link rel="stylesheet" type="text/css" href="/css/footer.css">
+        <link rel="stylesheet" type="text/css" href="<%=assetPath('css/layout.css')%>">
+        <link rel="stylesheet" type="text/css" href="<%=assetPath('css/header.css')%>">
+        <link rel="stylesheet" type="text/css" href="<%=assetPath('css/footer.css')%>">
         <%- style %>
     </head>
     <body>
