personalized chat added but some changes and analysis needed

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -13,25 +13,26 @@ a{
    color:inherit;
 }
 
-#chat-box{
+.chat-box{
 
     width:250px;
     height:300px;
     border: 1px dotted black;
     overflow: auto;
-    position:fixed;
-    bottom:0px;
-    right:0px;
+    // position:fixed;
+    // bottom:0px;
+    left: auto;
     background-color: lightgray;
     padding:0px;
+    display: inline-block;
 
-    #input-message-container{
+    .input-message-container{
         position: fixed;
         bottom: 0px;
         margin:0px;
         width:100%;
 
-        #input-message{
+        .input-message{
             margin:0px;
             input{
                 width:17%; //isme doubt hai fixed pr aur absolute pr
@@ -39,7 +40,7 @@ a{
         }
     }
 
-    #messages{
+    .messages{
         list-style: none;
         padding:0px;
        
