--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -8,32 +8,31 @@ h1 {
 a {
   color: inherit; }
 
-#chat-box {
+.chat-box {
   width: 250px;
   height: 300px;
   border: 1px dotted black;
   overflow: auto;
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
+  left: auto;
   background-color: lightgray;
-  padding: 0px; }
-  #chat-box #input-message-container {
+  padding: 0px;
+  display: inline-block; }
+  .chat-box .input-message-container {
     position: fixed;
     bottom: 0px;
     margin: 0px;
     width: 100%; }
-    #chat-box #input-message-container #input-message {
+    .chat-box .input-message-container .input-message {
       margin: 0px; }
-      #chat-box #input-message-container #input-message input {
+      .chat-box .input-message-container .input-message input {
         width: 17%; }
-  #chat-box #messages {
+  .chat-box .messages {
     list-style: none;
     padding: 0px; }
-    #chat-box #messages li {
+    .chat-box .messages li {
       padding: 10px;
       width: 80%; }
-    #chat-box #messages .self-message {
+    .chat-box .messages .self-message {
       text-align: right; }
-    #chat-box #messages .other-message {
+    .chat-box .messages .other-message {
       text-align: left; }
