search box added

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -36,3 +36,7 @@ a {
       text-align: right; }
     .chat-box .messages .other-message {
       text-align: left; }
+
+#search-box {
+  width: 250px;
+  border: 1px solid; }
