--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -58,8 +58,14 @@ a{
            text-align: left;
          
         }
-    }
-
-    
-    
+    }    
 }
+
+#search-box{
+    width: 250px;
+    border: 1px solid;
+
+
+}
+
+
