--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,8 +1,9 @@
 <script src="<%=assetPath('js/signIn.js')%>"></script>
+<link href="<%=assetPath('css/sign-in.css')%>" type="text/css" rel="stylesheet">
 <div id="sign-in-container">
-    <h1>
+    <h2>
         Login
-    </h1>
+    </h2>
     <div id="form-container">
     <form id="sign-up"  method="post" action="/users/login">
     <input type="email" placeholder="Enter Email" name="email" required></input>
