--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,7 +1,8 @@
+<link href="<%=assetPath('css/sign-up.css')%>" rel="stylesheet" type="text/css">
 <div id="sign-up-container">
-    <h1>
-        SignUp form
-    </h1>
+    <h2>
+        SignUp 
+    </h2>
     <div id="form-container">
     <form id="sign-up"  method="post" action="/users/create">
     <input type="text" placeholder="Enter Name" name="name" required></input>
